# ROS

Autonomous-Robot-using-GMapping-and-Navigation-on-ROS-master/mybot_navigation/maps/: test_map.yaml
Face-Detection-Robot-using-ROS-master/mybot_motion/: package.xml
Face-Detection-Robot-using-ROS-master/mybot_motion/scripts/: face.py
Maze-Solving-Robot-using-ROS-master/mybot_description/urdf/: m4w_robot.gazebo
Maze-Solving-Robot-using-ROS-master/mybot_motion/: CMakeLists.txt  package.xml
Obsatcle-Avoiding-Robot-using-AWS-RoboMaker-master/robot_ws/src/robot_app/: CMakeLists.txt  package.xml
Obsatcle-Avoiding-Robot-using-AWS-RoboMaker-master/robot_ws/src/robot_app/launch/: obstacle.launch
Obsatcle-Avoiding-Robot-using-AWS-RoboMaker-master/simulation_ws/src/m4w_robot/: CMakeLists.txt
Obstacle_Avoiding_Robot_using_ROS-master/devel/: .catkin  setup.sh
Obstacle_Avoiding_Robot_using_ROS-master/src/mybot_description/launch/: rviz.launch
Obstacle_Avoiding_Robot_using_ROS-master/src/mybot_description/urdf/: m4w_robot.xacro
Obstacle_Avoiding_Robot_using_ROS-master/src/mybot_gazebo/: CMakeLists.txt  package.xml
Obstacle_Avoiding_Robot_using_ROS-master/src/mybot_motion/scripts/: obstacle.py
Point-to-Point-Moving-Robot-using-AWS-RoboMaker-master/robot_ws/src/robot_app/: CMakeLists.txt  package.xml  setup.py
Point-to-Point-Moving-Robot-using-AWS-RoboMaker-master/simulation_ws/src/m4w_robot/: package.xml
Point-to-Point-Moving-Robot-using-AWS-RoboMaker-master/simulation_ws/src/m4w_robot/launch/: rviz.launch
Point-to-Point-Moving-Robot-using-AWS-RoboMaker-master/simulation_ws/src/m4w_robot/meshes/: hokuyo.dae
Wall-Following-Robot-using-AWS-RoboMaker-master/robot_ws/src/robot_app/: CMakeLists.txt  package.xml
Wall-Following-Robot-using-AWS-RoboMaker-master/robot_ws/src/robot_app/launch/: wallfollow.launch
Wall-Following-Robot-using-AWS-RoboMaker-master/robot_ws/src/robot_app/scripts/: wallfollow.py
Wall-Following-Robot-using-AWS-RoboMaker-master/simulation_ws/src/m4w_robot/: CMakeLists.txt  package.xml
Wall-Following-Robot-using-AWS-RoboMaker-master/simulation_ws/src/m4w_robot/launch/: spawn.launch
Wall-Following-Robot-using-AWS-RoboMaker-master/simulation_ws/src/m4w_robot/urdf/: m4w_robot.gazebo  m4w_robot.xacro  materials.xacro
Wall_Following_Robot_using_ROS-master/devel/: local_setup.sh
Wall_Following_Robot_using_ROS-master/src/mybot_motion/: package.xml
(+24 files in other folders)
