<?xml version="1.0"?>
<package format="2">
<name>robot_app</name>
<version>1.0.0</version>
<description>
A robot will start following the wall when it is launched
</description>
<license>MIT</license>
<author email="durgaprasad@thesmartbridge.com">Durgaprasad</author>
<maintainer email="durgaprasad@thesmartbridge.com">Smartbridge</maintainer>
<buildtool_depend>catkin</buildtool_depend>
<depend>rospy</depend>
<depend>std_msgs</depend>
<depend>geometry_msgs</depend>
<depend>nav_msgs</depend>
<depend>sensor_msgs</depend>
</package>