<?xml version="1.0"?>
<package format="2">
<name>m4w_robot</name>
<version>1.0.0</version>
<description>
wall following robot
</description>
<license>MIT</license>
<author email="durgaprasad@thesmartbridge.com">Durgaprasad</author>
<maintainer email="durgaprasad@thesmartbridge.com">Smartbridge</maintainer>
<buildtool_depend>catkin</buildtool_depend>
<depend>rospy</depend>
<depend>gazebo_ros</depend>
<depend>gazebo_plugins</depend>
<exec_depend>gazebo</exec_depend>
</package>